--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -5,7 +5,7 @@
 </time>
 
 <p class="lead my-3">
-  <%= @question.body %>
+  <%= sanitize @question.body %>
 </p>
 
 <%= link_to 'Back', questions_path, class: 'btn btn-primary' %>
@@ -20,21 +20,8 @@
 
 <h2 class="mt-5">Answers</h2>
 
-<% @answers.each do |answer| %>
-  <article class="mb-3 card">
-    <div class="card-body">
-      <section class="card-text">
-        <small><time datetime="<%= answer.formatted_created_at %>">
-          <%= answer.formatted_created_at %>
-        </time></small>
+<%= paginate @answers %>
 
-        <p class="mt-2 mb-3">
-          <%= answer.body %>
-        </p>
-      </section>
+<%= render partial: 'answers/answer', collection: @answers, as: :answer, locals: {question: @question} %>
 
-      <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-info btn-sm' %>
-      <%= link_to 'Delete', question_answer_path(@question, answer), class: 'btn btn-danger btn-sm', data: {method: :delete, confirm: "Are you sure?"} %>
-    </div>
-  </article>
-<% end %>
+<%= paginate @answers %>
