--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -27,7 +27,7 @@
 
 <%= pagination @pagy %>
 
-<h2 class="mb-3">Upload users from XLSX</h2>
+<h2 class="mb-3 mt-5">Upload users from XLSX</h2>
 
 <%= form_with url: admin_users_path do |f| %>
   <div class="mb-3 row">
