back button returned

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -22,4 +22,5 @@
   </div>
 
   <%= f.submit "Submit question", class: 'btn btn-primary' %>
+  <%= link_to 'Back', questions_path, class: 'btn btn-secondary' %>
 <% end %>
