--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -12,4 +12,5 @@
   </div>
 
   <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
+  <%= link_to 'Back', question_path(@question), class: 'btn btn-secondary' %>
 <% end %>
