--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,9 @@
 <% provide :page_title, 'Questions' %>
 <% currently_at 'Questions' %>
 
-<h1 class="mb-4">Questions</h1>
+<h1 class="mb-4"><%= t('questions.questions') %></h1>
 
-<%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
+<%= link_to t('questions.new_question'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
 
 <%== pagy_bootstrap_nav @pagy  %>
 
@@ -22,9 +22,9 @@
           </p>
         </section>
 
-        <%= link_to 'Show', question_path(question), class: 'btn btn-primary' %>
-        <%= link_to 'Edit', edit_question_path(question), class: 'btn btn-secondary' %>
-        <%= link_to 'Destroy', question_path(question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
+        <%= link_to t('questions.show'), question_path(question), class: 'btn btn-primary' %>
+        <%= link_to t('questions.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
+        <%= link_to t('questions.delete'), question_path(question), class: 'btn btn-danger', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
       
       </div>
     </article>
