--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% provide :page_title, "Registration" %>
-<% currently_at 'Sign Up' %>
+<% currently_at t('sign_up') %>
 
-<h1 class="mb-4">Registration</h1>
+<h1 class="mb-4"><%= t('user.registration') %></h1>
 
 <%= render 'form' %>
