--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<% provide :page_title, "Edit profile" %>
+<% provide :page_title, t('current_page.edit_profile') %>
 <% currently_at 'Edit profile' %>
 
-<h1 class="mb-4"><%= t('user.edit_profile') %></h1>
+<h1 class="mb-4"><%= t('current_page.edit_profile') %></h1>
 
 <%= render 'form' %>
