--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<% provide :page_title, "Registration" %>
-<% currently_at t('sign_up') %>
+<% provide :page_title, t('current_page.registration') %>
+<% currently_at 'Sign Up' %>
 
-<h1 class="mb-4"><%= t('user.registration') %></h1>
+<h1 class="mb-4"><%= t('current_page.registration') %></h1>
 
 <%= render 'form' %>
