--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,10 +1,10 @@
-<% provide :page_title, 'Admin Users' %>
+<% provide :page_title, t('current_page.admin_panel') %>
 <% currently_at 'Users' %>
 
-<h1 class="mb-4">Admin Users</h1>
+<h1 class="mb-4"><%= t('current_page.admin_panel') %></h1>
 
 <div class="btn-group mb-3">
-  <%= link_to 'Download zipped XLSX', admin_users_path(format: :zip),
+  <%= link_to t('admin.download_zipped_xlsx'), admin_users_path(format: :zip),
     class: 'btn btn-secondary' %>
 </div>
 
@@ -14,10 +14,10 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Name</th>
+      <th scope="col"><%= t('admin.table_users.name') %></th>
       <th scope="col">Email</th>
-      <th scope="col">Created at</th>
-      <th scope="col">Updated at</th>
+      <th scope="col"><%= t('admin.table_users.created_at') %></th>
+      <th scope="col"><%= t('admin.table_users.updated_at') %></th>
     </tr>
   </thead>
   <tbody>
@@ -27,12 +27,12 @@
 
 <%= pagination @pagy %>
 
-<h2 class="mb-3 mt-5">Upload users from XLSX</h2>
+<h2 class="mb-3 mt-5"><%= t('admin.upload_users_from_xlsx') %></h2>
 
 <%= form_with url: admin_users_path do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
-      <%= f.label :archive, 'Select archive' %>
+      <%= f.label :archive, t('admin.select_archive') %>
     </div>
 
     <div class="col-sm-10">
@@ -40,5 +40,5 @@
     </div>
   </div>
 
-  <%= f.submit "Upload", class: 'btn btn-primary' %>
+  <%= f.submit t('admin.upload'), class: 'btn btn-primary' %>
 <% end %>
