--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -10,7 +10,7 @@
       </div>
     </section>
 
-    <%= link_to 'Edit', edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
-    <%= link_to 'Delete', question_answer_path(question, answer), class: 'btn btn-danger btn-sm', data: {method: :delete, confirm: "Are you sure?"} %>
+    <%= link_to t('buttons.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
+    <%= link_to t('buttons.delete'), question_answer_path(question, answer), class: 'btn btn-danger btn-sm', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
   </div>
 <% end %>
