--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: [@question, @answer] do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
-      <%= f.label :body %>
+      <%= f.label t('answers.body') %>
     </div>
 
     <div class="col-sm-10">
@@ -11,6 +11,6 @@
     </div>
   </div>
 
-  <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
-  <%= link_to 'Back', question_path(@question), class: 'btn btn-secondary' %>
+  <%= f.submit t('buttons.submit'), class: 'btn btn-primary' %>
+  <%= link_to t('buttons.back'), question_path(@question), class: 'btn btn-secondary' %>
 <% end %>
