--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,3 +1,6 @@
-<h1 class="mb-4">Edit question</h1>
+<% provide :page_title, t('current_page.edit_question') %>
+<% currently_at 'Questions' %>
+
+<h1 class="mb-4"><%= t('current_page.edit_question') %></h1>
 
 <%= render 'form' %>
