--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,9 @@
-<% provide :page_title, 'Questions' %>
+<% provide :page_title, t('current_page.questions') %>
 <% currently_at 'Questions' %>
 
-<h1 class="mb-4"><%= t('questions.questions') %></h1>
+<h1 class="mb-4"><%= t('current_page.questions') %></h1>
 
-<%= link_to t('questions.new_question'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
+<%= link_to t('questions.new'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
 
 <%== pagy_bootstrap_nav @pagy  %>
 
@@ -22,9 +22,9 @@
           </p>
         </section>
 
-        <%= link_to t('questions.show'), question_path(question), class: 'btn btn-primary' %>
-        <%= link_to t('questions.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-        <%= link_to t('questions.delete'), question_path(question), class: 'btn btn-danger', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
+        <%= link_to t('buttons.show'), question_path(question), class: 'btn btn-primary' %>
+        <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
+        <%= link_to t('buttons.delete'), question_path(question), class: 'btn btn-danger', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
       
       </div>
     </article>
