--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,6 @@
+<% provide :page_title, @question.title %>
+<% currently_at 'Questions' %>
+
 <h1 class="mb-4"><%= @question.title %></h1>
 
 <time datetime="<%= @question.formatted_created_at %>">
@@ -8,20 +11,20 @@
   <%= sanitize @question.body %>
 </p>
 
-<%= link_to 'Back', questions_path, class: 'btn btn-primary' %>
-<%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-secondary' %>
-<%= link_to 'Destroy', question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
+<%= link_to t('buttons.back'), questions_path, class: 'btn btn-primary' %>
+<%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
+<%= link_to t('buttons.delete'), question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
 
 <hr class="my-3">
 
-<h2>Write your answer</h2>
+<h2><%= t('answers.write_your_answer') %></h2>
 
 <%= render 'answers/form' %>
 
-<h2 class="mt-5 mb-3">Answers</h2>
+<h2 class="mt-5 mb-3"><%= t('answers.answers') %></h2>
 
 <%== pagination @pagy %>
 
 <%= render partial: 'answers/answer', collection: @answers, as: :answer, locals: {question: @question} %>
 
-<%== pagy_bootstrap_nav @pagy  %>
+<%== pagination @pagy  %>
