--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,17 +13,17 @@
 
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
-      <%= f.label t('user.name'), class: 'col-sm-2 col-form-label' %>
+      <%= f.label t('users.name'), class: 'col-sm-2 col-form-label' %>
     </div>
 
     <div class="col-sm 10">
-      <%= f.text_field :name, placeholder: t('user.name'), class: 'form-control form-control-lg' %>
+      <%= f.text_field :name, placeholder: t('users.name'), class: 'form-control form-control-lg' %>
     </div>
   </div>
 
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
-      <%= f.label t('user.password'), class: 'col-sm-2 col-form-label' %>
+      <%= f.label t('users.password'), class: 'col-sm-2 col-form-label' %>
     </div>
 
     <div class="col-sm 10">
@@ -33,7 +33,7 @@
 
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
-      <%= f.label t('user.password_confirmation'), class: 'col-sm-2 col-form-label' %>
+      <%= f.label t('users.password_confirmation'), class: 'col-sm-2 col-form-label' %>
     </div>
 
     <div class="col-sm 10">
@@ -44,7 +44,7 @@
   <% unless @user.new_record? %>
     <div class="mb-3 row">
       <div class="col-sm-2 col-form-label">
-        <%= f.label t('user.old_password'), class: 'col-sm-2 col-form-label' %>
+        <%= f.label t('users.old_password'), class: 'col-sm-2 col-form-label' %>
       </div>
 
       <div class="col-sm 10">
@@ -53,5 +53,5 @@
     </div>
   <% end %>
 
-  <%= f.submit (@user.new_record? ? t('user.register') : t('user.save')), class: 'btn btn-primary btn-lg' %>
+  <%= f.submit (@user.new_record? ? t('buttons.register') : t('buttons.save')), class: 'btn btn-primary btn-lg' %>
 <% end %>
