--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,27 +7,6 @@
 
 <%== pagy_bootstrap_nav @pagy  %>
 
-  <% @questions.each do |question| %>
-    <article class="card mt-3">
-      <div class="card-body">
-        <h4><%= question.title %></h4>
-
-        <section class="card-text">
-          <time datetime="<%= question.formatted_created_at %>">
-            <small><%= question.formatted_created_at %></small>
-          </time>  
-
-          <p class="my-2">
-            <%= truncate strip_tags(question.body), length: 150, omission: '... (continued)' %>
-          </p>
-        </section>
-
-        <%= link_to t('buttons.show'), question_path(question), class: 'btn btn-primary' %>
-        <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-        <%= link_to t('buttons.delete'), question_path(question), class: 'btn btn-danger', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
-      
-      </div>
-    </article>
-  <% end %>
+<%= render @questions %>
 
 <%== pagy_bootstrap_nav @pagy %>
