--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,17 +7,24 @@
     <%= @question.formatted_created_at %>
 </time>
 
-<p class="lead my-3">
+<div class="lead my-3">
   <%= sanitize @question.body %>
-</p>
+</div>
 
-<%= link_to t('buttons.back'), questions_path, class: 'btn btn-primary' %>
-<%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
-<%= link_to t('buttons.delete'), question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
+<div class="mb-3">
+  <%= @question.user.gravatar %>
+  <%= @question.user.name_or_email %>
+</div>
 
-<hr class="my-3">
+<div class="border-top border-bottom py-3">
+  <div class="btn-group">
+    <%= link_to t('buttons.back'), questions_path, class: 'btn btn-primary' %>
+    <%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
+    <%= link_to t('buttons.delete'), question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: t('warnings.are_you_sure')} %>
+  </div>
+</div>
 
-<h2><%= t('answers.write_your_answer') %></h2>
+<h2 class="my-3"><%= t('answers.write_your_answer') %></h2>
 
 <%= render 'answers/form' %>
 
